# Personal-AI-Employee

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/skills/create-plan/: SKILL.md
.claude/skills/manage-approvals/: SKILL.md
.claude/skills/post-linkedin/: SKILL.md
.claude/skills/process-inbox/: SKILL.md
.claude/skills/send-email/: SKILL.md
.claude/skills/update-dashboard/: SKILL.md
.claude/skills/vault-manager/: SKILL.md
src/: approval.py  log_utils.py  orchestrator.py  planner.py  scheduler.py
src/watchers/: __init__.py  base_watcher.py  filesystem_watcher.py  gmail_watcher.py  linkedin_watcher.py
tests/: test_approval.py  test_base_watcher.py  test_filesystem_watcher.py  test_gmail_watcher.py  test_linkedin_watcher.py  test_orchestrator.py  test_orchestrator_silver.py  test_planner.py  test_scheduler.py
vault/: Business_Goals.md  Company_Handbook.md  Dashboard.md
