[project]
name = "personal-ai-employee"
version = "0.1.0"
description = "Personal AI Employee - Bronze Tier: Local-first, agent-driven automation with Obsidian vault"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "watchdog>=4.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/watchers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
